breakpoint adjustment to fix broken styles

--- a/source/_styles/src/stylus/sub/04-pages/03-article.styl
+++ b/source/_styles/src/stylus/sub/04-pages/03-article.styl
@@ -1,7 +1,7 @@
 [id^="block-"][id$="-views-block-content-recent-block-3"],
 .view-id-content_recent.view-display-id-page_1
   @extend .hoagies
-  @media all and (max-width: $bp-sm-max)
+  @media all and (max-width: $bp-xs-max)
     h2
       text-align: center
     article
